Hart. z-index for "fixed" .banner
as per https://github.com/mysociety/FixMyStreet-Commercial/issues/483
and #673

--- a/web/cobrands/hart/hart.scss
+++ b/web/cobrands/hart/hart.scss
@@ -448,3 +448,7 @@ blockquote#hart_hants_note {
     background-color: lighten($hart_primary, 30%);
     padding: 0.5em;
 }
+
+.banner {
+    z-index: 1;
+}
